--- a/interactive_classroom/package.json
+++ b/interactive_classroom/package.json
@@ -7,11 +7,14 @@
     "react-dom": "^16.13.1",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "storybook": "^5.3.19"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
