--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "styled-components": "^4.3.2",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@mdi/font": "^5.3.45",
