--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
@@ -40,5 +41,6 @@
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.5",
     "node-sass": "^4.11.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
