--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "styled-components": "^4.3.2",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@mdi/font": "^5.3.45",
     "axios": "^0.19.2",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "material-table": "^1.60.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.0",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
