--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "material-table": "^1.60.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.0",
